syntax = "proto3";

package message.v2;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "proto/message/v2;messagev2";

service MessageService{
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc EditMessage(EditMessageRequest) returns (google.protobuf.Empty);
  rpc DeleteMessage(DeleteMessageRequest) returns (google.protobuf.Empty);
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);
}

message SendMessageRequest{
  string user_id = 1;
  string username = 2;
  string content = 3;
}

message SendMessageResponse{
  string message_id = 1;
  google.protobuf.Timestamp created_at = 2;
}

message EditMessageRequest{
  string message_id = 1;
  string content = 2;
}

message DeleteMessageRequest{
  string message_id = 1;
}

message GetHistoryRequest{
  uint32 limit = 1;
}

message Message{
  string user_id = 1;
  string username = 2;
  string message_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetHistoryResponse{
  repeated Message messages = 1;
}
